Add getNews, getPromos, getFeatures, getAllReviews, and rateMovie
