# models/movie.go
@@ -1,14 +1,14 @@
 package models
 
 type Movie struct {
-	ID          int    `json:"id,omitempty"`
-	Title       string `json:"title"`
-	Genre       string `json:"genre"`
-	Description string `json:"description"`
-	Age         int    `json:"age"`
-	Duration    int    `json:"duration"`
-	Review      Review `json:"review"`
-	Date        string `json:"Date"`
+	ID          int           `json:"id,omitempty"`
+	Title       string        `json:"title"`
+	Genre       string        `json:"genre"`
+	Description string        `json:"description"`
+	Age         int           `json:"age"`
+	Duration    int           `json:"duration"`
+	Review      ReviewSummary `json:"review_summary"`
+	Date        string        `json:"Date"`
 }
 
 type MovieSchedules struct {
