# models/rating.go
@@ -1,6 +1,6 @@
 package models
 
-type Review struct {
+type ReviewSummary struct {
 	Rating      float32 `json:"Rating"`
 	TotalReview int     `json:"TotalReview"`
 }
